[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.2",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-spline-conv>=1.2.2",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
